--- a/Dictionary game.arb
+++ b/Dictionary game.arb
@@ -82,7 +82,9 @@ class Dict_Main
         puts "Antonyms: #{get_antonyms(word)}"
         puts "Synonyms: #{get_synonyms(word)}"
         puts "Word Examples:"
-        puts word_examples(word)['examples']
+        word_examples(word)['examples'].each do |val|
+            puts val['text']
+        end
     end
 
     def word_of_the_day
